// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with back button visible 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#818CF8",
      "flexDirection": "row",
      "gap": 8,
      "height": 56,
      "paddingHorizontal": 8,
      "paddingVertical": 8,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "borderColor": "#F0F0F0",
        "opacity": 1,
      }
    }
  >
    <Text />
  </View>
  <Text
    className="flex-1 text-[24px] font-bold"
    style={
      {
        "color": "#F0F0F0",
      }
    }
  >
    Details
  </Text>
</View>
`;

exports[`Header renders with both back and settings buttons visible 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#818CF8",
      "flexDirection": "row",
      "gap": 8,
      "height": 56,
      "paddingHorizontal": 8,
      "paddingVertical": 8,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "borderColor": "#F0F0F0",
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#F0F0F0",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "FontAwesome6Free-Solid",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {
            "fontWeight": "900",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    className="flex-1 text-[24px] font-bold"
    style={
      {
        "color": "#F0F0F0",
      }
    }
  >
    Details
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "borderColor": "#F0F0F0",
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#F0F0F0",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "FontAwesome6Free-Solid",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {
            "fontWeight": "900",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Header renders with settings button visible 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#818CF8",
      "flexDirection": "row",
      "gap": 8,
      "height": 56,
      "paddingHorizontal": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    className="flex-1 text-[24px] font-bold"
    style={
      {
        "color": "#F0F0F0",
      }
    }
  >
    Home
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "borderColor": "#F0F0F0",
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#F0F0F0",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "FontAwesome6Free-Solid",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {
            "fontWeight": "900",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Header renders with title only (default settings and back button hidden) 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#818CF8",
      "flexDirection": "row",
      "gap": 8,
      "height": 56,
      "paddingHorizontal": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    className="flex-1 text-[24px] font-bold"
    style={
      {
        "color": "#F0F0F0",
      }
    }
  >
    Home
  </Text>
</View>
`;
